# comfyui-dream-project

./: .gitignore  __init__.py  base.py  calculate.py  categories.py  colors.py  curves.py  disable.py  dreamlogger.py  embedded_config.py  enable.py  err.py  image_processing.py  inputfields.py  install.py  laboratory.py  lazyswitches.py  license.txt  loaders.py  motion.py  node_list.json  noise.py  output.py  prompting.py  pyproject.toml  readme.md  requirements.txt  seq_processing.py  shared.py  switches.py  types.py  uninstall.py  util.py  utility.py
examples/: area-sampled-noise.json  laboratory.json  motion-workflow-example.json  motion-workflow-with-color-coherence.json  prompt-morphing.json
